--- a/client/template.html
+++ b/client/template.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <div id="root">
-    <app></app>
-   </div> 
+   <div id="root"><!-- app --></div>
 </body>
 </html>
