--- a/client/template.html
+++ b/client/template.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <div id="root"><!-- app --></div>
+   <div id="root"><!-- stark --></div>
 </body>
 </html>
